move images to right dir and ensure proper link to images

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="row">
     <div class="icon">
     <a href="index.html">
-        <img src="logo.jpg" alt="" id="logo">
+        <img src="img/logo.jpg" alt="" id="logo">
     </a>
     </div>
 </div>
@@ -96,8 +96,8 @@
                         </div>
                     </div>
 <footer>
-<a href="http://twitter.com/stephenGMA01"><img src="twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
-<a href="http://facebook.com/seun.timileyin"><img src="facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
+<a href="http://twitter.com/stephenGMA01"><img src="img/twitter-wrap.png" alt="Twitter Logo" class="social-icon"></a>
+<a href="http://facebook.com/seun.timileyin"><img src="img/facebook-wrap.png" alt="Facebook Logo" class="social-icon"></a>
 <p> &copy 2018 My Portfolio </p>
 </footer>
 </div>
